# logfire-rust

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  OTEL_METRICS_GUIDE.md  README.md  flake.nix  release.sh
.github/: dependabot.yml
.github/workflows/: main.yml
examples/: actix-web.rs  axum.rs  basic.rs  custom_types.rs  sigil_demo.rs  test_sigils.rs
logfire/: CHANGELOG.md  Cargo.toml  README.md
logfire-client/: Cargo.toml  README.md
logfire-client/examples/: fetch_errors.rs
logfire-client/src/: builder.rs  client.rs  lib.rs  token.rs
logfire-core/: Cargo.toml
logfire-core/src/: lib.rs  token.rs
logfire/examples/: axum.rs
logfire/src/: config.rs  exporters.rs  lib.rs  logfire.rs  metrics.rs  test_utils.rs  ulid_id_generator.rs
logfire/src/bridges/: log.rs  tracing.rs
logfire/src/internal/: env.rs  logfire_tracer.rs  metric_reader_runtime_hack.rs  mod.rs  pending_span_processor.rs  span_data_ext.rs
logfire/src/internal/exporters/: console.rs  remove_pending.rs
logfire/src/macros/: impl_.rs  mod.rs
logfire/src/usage/: metrics.rs  mod.rs
logfire/tests/: test_basic_exports.rs  test_grpc_sink.rs  test_http_sink.rs  test_log_attributes.rs  test_metrics_shutdown.rs  test_resource_attributes.rs
src/: bridges.rs  builder.rs  client.rs  config.rs  exporters.rs  lib.rs  logfire.rs  macros.rs  main.rs  metrics.rs  sqlx.rs  test_utils.rs  token.rs  types.rs
src/bridges/: log.rs  tracing.rs
src/internal/: constants.rs  log_processor_shutdown_hack.rs  logfire_tracer.rs  mod.rs
src/internal/exporters/: console.rs  mod.rs  remove_pending.rs
src/macros/: .mod.rs.pending-snap  impl_.rs  mod.rs
src/sqlx/: arguments.rs  column.rs  connection.rs  error.rs  executor.rs  mod.rs  row.rs  statement.rs  transaction.rs  type_info.rs  types.rs  value.rs
src/usage/: examples.rs  lambda.md  metrics.rs  mod.rs
src/usage/examples/: axum.rs  mod.rs
tests/: test_basic_exports.rs  test_grpc_sink.rs  test_http_sink.rs  test_log_attributes.rs  test_macro_hygiene.rs  test_span_attributes.rs
