[package]
name = "logfire-client"
description = "Logfire client SDK, query your Pydantic Logfire logs and metrics using SQL!"
version = "0.1.0"
edition = "2024"

[features]
default = []
sqlx = ["dep:sqlx-core", "dep:async-stream", "dep:either", "dep:futures-core", "dep:log", "dep:url"]

[dependencies]
async-stream = { version = "0.3", optional = true }
chrono = { version = "0.4", features = ["serde"] }
either = { version = "1", optional = true }
futures-core = { version = "0.3", optional = true }
log = { version = "0.4", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx-core = { version = "0.8", optional = true }
url = { version = "2", optional = true }
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
