[package]
name = "logfire-client"
description = "Logfire client SDK, query your Pydantic Logfire logs and metrics using SQL!"
version = "0.1.0"
edition = "2024"

[features]
default = []

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
