[package]
name = "logfire-client"
version = "0.1.0"
description = "Logfire client SDK, query your Pydantic Logfire logs and metrics using SQL!"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[features]
default = []

[dependencies]
logfire-core.workspace = true

chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
